--- a/src/index.css
+++ b/src/index.css
@@ -73,9 +73,38 @@ footer {
   z-index: 15;
   position: relative;
   display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  padding: 1rem;
+  overflow-y: scroll;
   height: 100%;
   width: 90%;
   max-width: 800px;
   margin-left: auto;
   background-color: #030615;
+}
+
+.sidebarContents div {
+  flex: 1;
+}
+
+.sidebarContents button {
+  background: transparent;
+  color: white;
+  border: none;
+  outline: none;
+  margin-right: auto;
+}
+
+@media (min-width: 640px) {
+  .sidebar {
+    position: relative;
+    inset: unset;
+    min-width: 30%;
+    box-shadow: 0 0 40px 1px #030615; /* kasi gradient kat tepi */
+  }
+
+  .sidebarContents{
+    margin: unset;
+  }
 }
