--- a/src/index.css
+++ b/src/index.css
@@ -45,6 +45,38 @@ footer {
   align-items: center;
   justify-content: space-between;
   gap: 1rem;
+  padding: 1rem;
+}
+
+footer div {
+  display: flex;
+  flex-direction: column;
+ 
+}
+
+footer h2 {
+  font-size: 1.4rem;
+}
+
+footer h1 {
+  font-size: 0.9rem;
+  font-weight: 200;
+}
+
+footer button {
+  background: transparent;
+  border: none;
+  outline: none;
+  color: white;
+  padding: 1rem;
+}
+
+footer button i {
+  font-size: 1.3rem;
+}
+
+footer button:hover {
+  opacity: 0.5;
 }
 
 .bgGradient {
@@ -95,6 +127,7 @@ footer {
   outline: none;
   margin-right: auto;
 }
+
 
 @media (min-width: 640px) {
   .sidebar {
