--- a/src/index.css
+++ b/src/index.css
@@ -38,7 +38,7 @@
 
 footer {
   position: fixed;
-  display: fixed;
+  display: flex;
   bottom: 0;
   left: 0;
   width: 100%;
@@ -69,6 +69,7 @@ footer button {
   outline: none;
   color: white;
   padding: 1rem;
+  transition-duration: 200ms;
 }
 
 footer button i {
@@ -126,8 +127,39 @@ footer button:hover {
   border: none;
   outline: none;
   margin-right: auto;
+  cursor: pointer;
+  transition-duration: 200ms;
+  padding: 1rem;
 }
 
+.sidebarContents button:hover {
+  opacity: 0.7;
+}
+
+.loadingState {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex: 1;
+}
+
+.loadingState i{
+
+  opacity: 0.2;
+  font-size: 3rem;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+
+  to {
+    transform: rotate(360deg);
+  }
+  
+}
 
 @media (min-width: 640px) {
   .sidebar {
