--- a/src/index.css
+++ b/src/index.css
@@ -51,7 +51,6 @@ footer {
 footer div {
   display: flex;
   flex-direction: column;
- 
 }
 
 footer h2 {
@@ -117,6 +116,11 @@ footer button:hover {
   background-color: #030615;
 }
 
+.sidebarContents h2 {
+  font-weight: 200;
+  font-size: 1.4rem;
+}
+
 .sidebarContents div {
   flex: 1;
 }
@@ -129,11 +133,21 @@ footer button:hover {
   margin-right: auto;
   cursor: pointer;
   transition-duration: 200ms;
-  padding: 1rem;
+  padding: 1rem 0;
 }
 
 .sidebarContents button:hover {
   opacity: 0.7;
+}
+
+.descriptionContainer {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+.descriptionTitle {
+  font-size: 1.1rem;
+  font-weight: 200;
 }
 
 .loadingState {
